ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cctv-out-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: ""
      http:
        paths:
          - path: /cctvs
            pathType: Prefix
            backend:
              service:
                name: cctv-service
                port:
                  number: 8080
          - path: /health-checks
            pathType: Prefix
            backend:
              service:
                name: health-check-service
                port:
                  number: 8080
          - path: /issues
            pathType: Prefix
            backend:
              service:
                name: issue-service
                port:
                  number: 8080
          - path: /notifications
            pathType: Prefix
            backend:
              service:
                name: notification-service
                port:
                  number: 8080
